--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,10 +30,13 @@ importFrom(cowplot,plot_grid)
 importFrom(cowplot,save_plot)
 importFrom(ggplotify,as.ggplot)
 importFrom(grDevices,colorRampPalette)
+importFrom(magrittr,"%>%")
 importFrom(rtracklayer,export.bw)
 importFrom(rtracklayer,import.bw)
 importFrom(rtracklayer,import.wig)
 importFrom(stats,cor)
 importFrom(stats,lm)
+importFrom(stats,median)
 importFrom(stats,predict)
 importFrom(stats,sd)
+importFrom(tibble,as_tibble)
